@@ -1,14 +1,13 @@
 package net.luminis.tls.extension;
 
-import net.luminis.tls.DecodeErrorException;
+import net.luminis.tls.alert.DecodeErrorException;
 import net.luminis.tls.TlsConstants;
 
 import java.nio.ByteBuffer;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
-
-import static net.luminis.tls.TlsConstants.SignatureScheme.*;
 
 /**
  * The TLS supported groups extension.
@@ -21,17 +20,11 @@ public class SignatureAlgorithmsExtension extends Extension {
     private List<TlsConstants.SignatureScheme> algorithms = new ArrayList<>();
 
     public SignatureAlgorithmsExtension() {
-        algorithms = List.of(new TlsConstants.SignatureScheme[] {
-                ecdsa_secp256r1_sha256,
-                rsa_pss_rsae_sha256,
-                rsa_pkcs1_sha256,
-                ecdsa_secp384r1_sha384,
-                rsa_pss_rsae_sha384,
-                rsa_pkcs1_sha384,
-                rsa_pss_rsae_sha512,
-                rsa_pkcs1_sha512,
-                rsa_pkcs1_sha1
-        });
+        algorithms = Collections.emptyList();
+    }
+
+    public SignatureAlgorithmsExtension(List<TlsConstants.SignatureScheme> signatureSchemes) {
+        algorithms = signatureSchemes;
     }
 
     public SignatureAlgorithmsExtension(TlsConstants.SignatureScheme... signatureAlgorithms) {
